<resources>
    <string name="app_name">PlacePlanner</string>
    <string name="action_settings">Settings</string>

    <string name="google_api_key">AIzaSyCqO1Q-1Qx2z_YOa7bGc8IacYVhJJSAOIQ</string>


    <string name="locations">Locations</string>
    <string name="locationDetails">Location details</string>
    <string name="title_activity_location_details">View/Edit</string>
    <string name="section_format">TMP2</string>

    <!--activity titles-->
    <string name="title_activity_location_import">Import locations</string>
    <string name="title_activity_location_export">Export locations</string>
    <string name="title_activity_location_add">Location hinzufügen</string>
    <string name="title_activity_category_add">Kategorie hinzufügen</string>
    <string name="title_activity_category_show">Kategorien</string>
    <string name="title_activity_category_tabbed">Kategorien</string>
    <string name="title_activity_friend_add">Freund hinzufügen</string>
    <string name="title_activity_friend_show">Kontaktliste</string>
    <string name="title_activity_friend_tabbed">Kontaktliste</string>
    <string name="title_activity_group_add">Gruppe hinzufügen</string>
    <string name="title_activity_group_show">Gruppen</string>
    <string name="title_activity_group_tabbed">Gruppendetails</string>



    <!--menu items-->
    <string name="delete_location">Location löschen</string>
    <string name="add_location">Location hinzufügen</string>
    <string name="edit_location">Location bearbeiten</string>
    <string name="category_icon">Icon</string>
    <string name="show_location">Alle Locations_anzeigen</string>
    <string name="search_location">Location suchen</string>
    <string name="sort_location">Locations sortieren</string>
    <string name="import_location">Locations importieren</string>
    <string name="export_location">Locations exportieren</string>
    <string name="export">Export</string>
    <string name="file_name">File Name</string>
    <string name="add_category">Kategorie hinzufügen</string>
    <string name="show_categorys">Kategorien anzeigen</string>
    <string name="delete_category">Kategorie löschen</string>
    <string name="show_map">Karte anzeigen</string>
    <string name="add_friend">Freund hinzufügen</string>
    <string name="show_friend">Kontaktliste</string>
    <string name="delete_friend">Freund löschen</string>
    <string name="add_group">Gruppe erstellen</string>
    <string name="show_group">Gruppen anzeigen</string>
    <string name="delete_group">Gruppe löschen</string>
    <string name="clear_locations">Alle Locations löschen</string>

    <!--location Tabs-->
    <string name="details">Details</string>
    <string name="edit">Bearbeiten</string>

    <!--location Details/Edit-->
    <string name="cancel">Abbrechen</string>
    <string name="ok">OK</string>
    <string name="street">Straße</string>
    <string name="str_number">Hausnummer</string>
    <string name="postal_code">Postleitzahl</string>
    <string name="city">Stadt</string>
    <string name="country">Land</string>
    <string name="lat">Latitude</string>
    <string name="lng">Longitude</string>
    <string name="get_curr_position">Get current position</string>
    <string name="web_address">Web Address</string>
    <string name="email">E-mail Adresse</string>
    <string name="phone_number">Telefonnummer</string>

    <!--category Details/Edit-->
    <string name="discription">Beschreibung</string>
    <string name="categoryName">Name</string>

    <string name="name">Name</string>
    <string name="comment">Kommentar</string>
    <string name="address">Addresse</string>
    <string name="mediaUrl">MediaURL</string>
    <string name="rating">Rating</string>
    <string name="owner">Besitzer</string>
    <string name="coordinates">GPS-Koordinaten</string>
    <string name="contactDetails">Kontakte</string>
    <string name="categories">Kategorien</string>

    <!--location Import-->
    <string name="importbutton">Importieren</string>
    <string name="searchbutton">Durchsuchen</string>
    <string name="importdatei">Hier zu importierenden Dateinamen eingeben</string>

    <!--location Export-->
    <string name="exporttext">Name der Datei, in welche die Daten exportiert werden: </string>
    <string name="exportbutton">Exportieren</string>

    <!--category Add-->
    <string name="category_details">Categorie details</string>
    <string name="open_map">Pick from map</string>

    <!--category Add-->
    <string name="friend_zip">Postleitzahl</string>
    <string name="friend_telephone">Telefonnummer</string>

    <!--Group Add-->
    <string name="group_name">Name der Gruppe</string>

    <!--filter search sort-->
    <string name="filter">Filter</string>
    <string name="filter_location">Filter</string>
    <string name="choose">Choose</string>
    <string name="created_on">Created On</string>
    <string name="distance">Distance</string>
    <string name="last_edit_on">Last edit on</string>
    <string name="words">String search</string>

    <string name="no_address_found">This location does not have an address</string>
    <string name="warning">Warning</string>
    <string name="get_address">Get Address</string>

</resources>
