<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".locations.views.LocationsMainActivity">

    <!--TODO: change icon-->
    <item
        android:id="@+id/menu_add_location"
        android:title="@string/add_location"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_search_location"
        android:title="@string/search_location"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_sort_location"
        android:title="@string/sort_location"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_import_location"
        android:title="@string/import_location"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_export_location"
        android:title="@string/export_location"
        app:showAsAction="never"/>

</menu>