<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/friend_name"
            android:contentDescription="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View style="@style/Divider"/>

        <TextView
            android:id="@+id/friend_street"
            android:contentDescription="@string/street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View style="@style/Divider"/>

        <TextView
            android:id="@+id/friend_street_number"
            android:contentDescription="@string/str_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View style="@style/Divider"/>

        <TextView
            android:id="@+id/friend_zip"
            android:contentDescription="@string/friend_zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View style="@style/Divider"/>

        <TextView
            android:id="@+id/friend_city"
            android:contentDescription="@string/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View style="@style/Divider"/>

        <TextView
            android:id="@+id/friend_country"
            android:contentDescription="@string/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View style="@style/Divider"/>

        <TextView
            android:id="@+id/friend_telephone"
            android:contentDescription="@string/friend_telephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View style="@style/Divider"/>

        <TextView
            android:id="@+id/friend_email"
            android:contentDescription="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View style="@style/Divider"/>
    </LinearLayout>



    <View style="@style/Divider"/>

</LinearLayout>