<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".friend.views.FriendShowActivity">

    <item
        android:id="@+id/action_add_friend"
        android:title="@string/add_friend"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_add_group"
        android:title="@string/add_group"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_show_group"
        android:title="@string/show_group"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>