<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".locations.views.fragments.LocationEditFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:orientation="vertical">

        <TextView
            style="@style/SmallAndItalic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:id="@+id/name"/>
        <View style="@style/Divider"/>

        <TextView
            style="@style/SmallAndItalic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/address"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:id="@+id/address"/>
        <View style="@style/Divider"/>

        <TextView
            style="@style/SmallAndItalic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/comment"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment"
            android:id="@+id/comment"/>
        <View style="@style/Divider"/>

        <TextView
            style="@style/SmallAndItalic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/mediaUrl"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:hint="@string/mediaUrl"
            android:id="@+id/mediaUrl"/>
        <View style="@style/Divider"/>

        <TextView
            style="@style/SmallAndItalic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/rating"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rating"
            android:id="@+id/rating"/>
        <View style="@style/Divider"/>

        <TextView
            style="@style/SmallAndItalic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/owner"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/owner"
            android:id="@+id/owner"/>
        <View style="@style/Divider"/>

        <TextView
            style="@style/SmallAndItalic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/coordinates"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/coordinates"
            android:id="@+id/gpsCoordinates"/>
        <View style="@style/Divider"/>

        <TextView
            style="@style/SmallAndItalic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/contactDetails"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contactDetails"
            android:id="@+id/contactDetails"/>
        <View style="@style/Divider"/>

        <TextView
            style="@style/SmallAndItalic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/categories"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/categories"
            android:id="@+id/categories"/>

        <LinearLayout
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:onClick="navigateBack"
            />
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/okButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ok"
            />
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
